<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title_text"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="@dimen/title_margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description_text"
        android:layout_marginTop="@dimen/title_margin_top"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/shoes_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_tv"
        android:src="@drawable/shoes"
        android:contentDescription="@string/welcome_image_description" />

    <Button
        android:id="@+id/welcome_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_btn_text"
        android:layout_marginBottom="@dimen/instruction_button_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>