<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/detail_margin"
    android:layout_marginEnd="@dimen/detail_margin">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoe_detail_title"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="@dimen/title_margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shoe_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_shoe_margin_top"
        android:layout_marginStart="@dimen/detail_shoe_margin_start"
        android:layout_marginEnd="@dimen/detail_shoe_margin_start"
        android:selectAllOnFocus="true"
        android:hint="@string/shoe_name"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shoe_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shoe_company_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_shoe_margin_top"
        android:layout_marginStart="@dimen/detail_shoe_margin_start"
        android:layout_marginEnd="@dimen/detail_shoe_margin_start"
        android:selectAllOnFocus="true"
        android:hint="@string/company"
        app:layout_constraintTop_toBottomOf="@+id/shoe_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shoe_company_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shoe_size_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_shoe_margin_top"
        android:layout_marginStart="@dimen/detail_shoe_margin_start"
        android:layout_marginEnd="@dimen/detail_shoe_margin_start"
        android:selectAllOnFocus="true"
        android:hint="@string/size"
        app:layout_constraintTop_toBottomOf="@+id/shoe_company_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shoe_size_et"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shoe_description_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_shoe_margin_top"
        android:layout_marginStart="@dimen/detail_shoe_margin_start"
        android:layout_marginEnd="@dimen/detail_shoe_margin_start"
        android:selectAllOnFocus="true"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/shoe_size_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shoe_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_button_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/shoe_description_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save_btn_text"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_button_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/save_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel_btn_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>