<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="@dimen/login_title_margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_email_margin_top"
        android:layout_marginStart="@dimen/login_email_margin_start"
        android:layout_marginEnd="@dimen/login_email_margin_start"
        android:selectAllOnFocus="true"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:text="test@gmail.com"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_email_margin_top"
        android:layout_marginStart="@dimen/login_email_margin_start"
        android:layout_marginEnd="@dimen/login_email_margin_start"
        android:selectAllOnFocus="true"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="Miami2020."/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/login_button_margin_start"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:layout_marginEnd="@dimen/login_button_margin_start"
        android:text="@string/sign_in_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/login_button_margin_start"
        android:layout_marginTop="@dimen/register_button_margin_top"
        android:layout_marginEnd="@dimen/login_button_margin_start"
        android:layout_marginBottom="@dimen/register_button_margin_bottom"
        android:text="@string/register_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/loading_bar_margin_start"
        android:layout_marginTop="@dimen/register_button_margin_bottom"
        android:layout_marginEnd="@dimen/loading_bar_margin_start"
        android:layout_marginBottom="@dimen/register_button_margin_bottom"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_layout"
        app:layout_constraintStart_toStartOf="@+id/password_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>